@@ -87,6 +87,7 @@ Changelog
  * Fix: Search bar in chooser modals now performs autocomplete searches under PostgreSQL (Matt Westcott)
  * Fix: Server-side document filenames are preserved when replacing a document file (Suyash Singh, Matt Westcott)
  * Fix: Add missing wagtailadmin_tags in `workflow_state_approved.html` template (Alex Tomkins)
+ * Fix: Change url serving mechanism to allow url punctuations from RFC 3986 section 2.3 (https://www.ietf.org/rfc/rfc3986.txt) (Storm Heg and Jake Howard)
  * Docs: Add custom permissions section to permissions documentation page (Dan Hayden)
  * Docs: Add documentation for how to get started with contributing translations for the Wagtail admin (Ogunbanjo Oluwadamilare)
  * Docs: Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
